# sajax

./: .gitignore  README.md  Starter_Fit_with_Sage.py  pyproject.toml  requirements.txt
.github/: tests.yml
.github/workflows/: docs.yml  publish.yml  tests.yml
docs/: Makefile  conf.py  index.rst  installation.md  modules.rst  usage.md
docs/_static/: input_spectrum.txt
docs/examples/: comparison.ipynb  inference.ipynb  quickstart.ipynb  sajax_quickstart.ipynb  stellar_rotation.ipynb
examples/: ldc.txt  sajax_quickstart.ipynb  stellar_rotation.ipynb
sajax/: __init__.py  core.py  geometry.py  interpolation.py  planet.py
tests/: test_core.py  test_planet.py
